feat(sinks): code reviews
