# sinks/api/http/openapi.yaml
@@ -200,31 +200,6 @@ paths:
           description: Database can't process request.
         '500':
           $ref: "#/components/responses/ServiceErrorRes"
-  /v2/sinks:
-    parameters:
-      - $ref: "#/components/parameters/Authorization"
-    post:
-      summary: 'Create a new Sink with YAML support'
-      operationId: createSinkExperimental
-      tags:
-        - sink
-      requestBody:
-        $ref: "#/components/requestBodies/SinkCreateReqV2"
-      responses:
-        '201':
-          $ref: "#/components/responses/SinkObjV2Res"
-        '400':
-          description: Failed due to malformed JSON.
-        '401':
-          description: Missing or invalid access token provided.
-        '409':
-          description: Entity already exist.
-        '415':
-          description: Missing or invalid content type.
-        '422':
-          description: Database can't process request.
-        '500':
-          $ref: "#/components/responses/ServiceErrorRes"
 components:
   securitySchemes:
     bearerAuth:
@@ -388,8 +363,10 @@ components:
         config:
           type: object
           example:
-            remote_host: my.prometheus-host.com
-            username: dbuser
+            exporter:
+              remote_host: my.prometheus-host.com
+            authentication:
+              username: dbuser
           description:
             Object representing backend specific configuration information
     SinkCreateReqSchema:
@@ -419,8 +396,10 @@ components:
         config:
           type: object
           example:
-            remote_host: my.prometheus-host.com
-            username: dbuser
+            exporter:
+              remote_host: my.prometheus-host.com
+            authentication:
+              username: dbuser
           description: Object representing backend specific configuration information
     SinkCreateReqV2Schema:
       type: object
@@ -540,8 +519,10 @@ components:
         config:
           type: object
           example:
-            remote_host: my.prometheus-host.com
-            username: dbuser
+            exporter:
+              remote_host: my.prometheus-host.com
+            authentication:
+              username: dbuser
             opentelemetry: enabled
           description: Object representing backend specific configuration information
         ts_created:
@@ -592,8 +573,10 @@ components:
             exporter:
               remote_host: my.prometheus-host.com
             authentication:
-              username: dbuser
-              opentelemetry: enabled
+              exporter:
+                remote_host: my.prometheus-host.com
+              authentication:
+                username: dbuser
           description: YAML representing backend specific configuration information
         ts_created:
           type: string
